2012-02-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPasteboard.m: Use an NSMapTable to store pasteboards so we
	don't have to do the nasty retain count hack to deallocate them.
	Fix encoding so that filter meta-pasteboards are sent to gpbs by
	reference rather than bycopy.  Add special proxy to avoid data objects
	being copied to/from pasteboard server when created by filters.
	* Tools/make_services.m: Fix buggy initialisation of 'verbose' setting.
	Add check/warning if filter service has non-filename send types.

2012-02-08 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSPasteboard.m (+pasteboardByFilteringFile:): Correct
	typo in Richard's change.
	* Source/NSPasteboard.m (-pasteboard:provideDataForType:): Use the
	file name directly instead of reading the file contents.
	* Source/NSImageRep.m (+imageRepsWithContentsOfFile:, +imageFileTypes):
	Start working on filter service support for images.

2012-02-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPasteboard.m: ([+pasteboardByFilteringFile:]) fixed to
	specify source as file names, not file contents.

2012-02-03  Adam Fedor  <fedor@gnu.org>

	* Bump version

2012-02-03  Eric Wasylishen  <ewasylishen@gmail.com>

	* Headers/AppKit/NSOutlineView.h:
	* Source/NSOutlineView.m: Add support for
	outlineView:dataCellForTableColumn:item: delegate method
	* Headers/AppKit/NSTableView.h:
	* Source/NSTableView.m: Add support for
	tableView:dataCellForTableColumn:row: delegate method

2012-02-03  Adam Fedor  <fedor@gnu.org>

	* Version 0.22.0
	* Update release notes

2012-02-01 Riccardo Mottola <rm@gnu.org>

	* Source/GSThemePanel:
	centerScanRect button to avoid blurring

2012-02-01 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSThemeInspector.m: Add missing include.

2012-02-01 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSBitmapImageRep.m (-initWithFocusedViewRect:): Return
	nil if the image data is empty. This could lead to an exception
	alter on.